--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-site do 1º Ano B ! 
+<header>ALURAFLIX</header>
 
-Sala 04 
+<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME</h1>
 
-Escola Dr João Pires de Camargo
-
+<P>#homem-aranha</P>
